--- a/hospital.css
+++ b/hospital.css
@@ -23,6 +23,38 @@ header {
   gap: 30px;
 }
 
+ /* Cabeçalho */
+  .topo {
+    background-color: #004e8c;
+    padding: 10px 0;
+    color: white;
+  }
+  
+  /* Logo da esquerda */
+  .logo {
+    height: 60px;
+    float: left;
+  }
+  
+  /* Menu de navegação */
+  .menu ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+  }
+  
+  .menu a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
+  }
+  
+  .menu a:hover {
+    color: #ffcc00;
+  }
+
 /* Bloco de informações */
 .info, .mapa {
   background: white;
@@ -52,10 +84,10 @@ header {
 }
 
 /* Rodapé */
-footer {
-  text-align: center;
-  padding: 20px;
-  background-color: #004e8c;
-  color: white;
-  margin-top: 40px;
-}
+ .rodape {
+    background-color: #004e8c;
+    color: white;
+    text-align: center;
+    padding: 20px 10px;
+    margin-top: 40px;
+  }
