--- a/hospital.css
+++ b/hospital.css
@@ -1,10 +1,17 @@
 /* Reset e configurações básicas */
-body {
-  font-family: 'Segoe UI', sans-serif;
-  background-color: #f8f9fa;
-  margin: 0;
-  padding: 0;
-}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+/* Estilo geral do corpo */
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    line-height: 1.6;
+    background-color: #f8f9fa;
+    color: black;
+  }
+
 
 /* Cabeçalho */
 header {
