--- a/hospital.css
+++ b/hospital.css
@@ -1,19 +1,27 @@
-/* Reset básico e configuração padrão */
+/* Reset e configurações básicas */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-  
-  /* Estilo geral do corpo */
+/* Estilo geral do corpo */
   body {
     font-family: 'Segoe UI', sans-serif;
     line-height: 1.6;
-    background-color: #f9f9f9;
+    background-color: #f8f9fa;
     color: black;
   }
-  
-  /* Estrutura principal da página */
+
+
+/* Cabeçalho */
+header {
+  background-color: #004e8c;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+ /* Estrutura principal da página */
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -21,8 +29,8 @@
   padding: 40px 20px;
   gap: 30px;
 }
-  
-  /* Cabeçalho */
+
+ /* Cabeçalho */
   .topo {
     background-color: #004e8c;
     padding: 10px 0;
@@ -40,7 +48,7 @@
     list-style: none;
     display: flex;
     justify-content: flex-end;
-    gap: 20px;
+    gap: 30px;
   }
   
   .menu a {
@@ -53,68 +61,7 @@
   .menu a:hover {
     color: #ffcc00;
   }
-  
-  /* Seção de banner principal */
-  .banner {
-    background: url('banner.jpg') center/cover no-repeat;
-    color: black;
-    text-align: center;
-    padding: 80px 20px;
-  }
-  
-  .banner h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-  }
-  
-  .noticias {
-    padding: 40px 20px;
-    background-color: #fff;
-  }
-  
-  .noticias h2 {
-    margin-bottom: 30px;
-    text-align: center;
-    color: #004e8c;
-  }
-  
-  .grid-noticias {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-  }
-  
-  .card {
-    background: #f1f1f1;
-    padding: 15px;
-    border-radius: 8px;
-    transition: transform 0.3s ease;
-  }
-  
-  .card:hover {
-    transform: scale(1.03);
-  }
-  
-  .card img {
-    max-width: 100%;
-    border-radius: 6px;
-    margin-bottom: 10px;
-  }
-.card-link {
-  text-decoration: none;
-  color: inherit;
-  display: block;
-}
-  
-  .rodape {
-    background-color: #004e8c;
-    color: white;
-    text-align: center;
-    padding: 20px 10px;
-    margin-top: 40px;
-  }
 
-/* css */
 /* Bloco de informações */
 .info, .mapa {
   background: white;
@@ -143,5 +90,11 @@
   border-radius: 6px;
 }
 
-
-  
+/* Rodapé */
+ .rodape {
+    background-color: #004e8c;
+    color: white;
+    text-align: center;
+    padding: 20px 10px;
+    margin-top: 40px;
+  }
